# DEPI_GP

./: .dockerignore  .env.example  .gitignore  Dockerfile  Hello.txt  README.md  app.py  config.py  dockerfile  job_config.json  kernel-metadata.json  main.py  main_pipeline.py  main_preprocessing.py  modal_app.py  pyproject.toml  query_answer.py  requirements.txt  schemas.py  server.py  setup.sh  test.py  test_ingest.py  videos.json
check/: job_config.json
frontend/: app.js
frontend/pages/: chat.js
metadata/: -DEL6SVRPw0_metadata.json  -DEL6SVRPw0_metadata.md  j02OZRjf2d8_metadata.json  j02OZRjf2d8_metadata.md
modules/: config.py  database.py  embeddings.py  ingest.py  llm_handler.py  main_pipeline.py  retrieval.py  storage.py  transcribe.py  transcribe2.py  transcribe_chunk.py  utils.py  vision.py  vision2.py
tests/: API_tests.py  conftest.py  test_chunking.py  test_imports.py  test_ingest.py  test_modules_behavior.py  test_retrieval_fusion.py  test_schemas.py  test_streamlit_app.py  test_verification.py
videoinsight_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
