[project]
name = "depi-gp"
version = "0.1.0"
description = "Real-time Educational Avatar System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.0",
    "openai-whisper==20250625",
    "transformers==4.44.0",
    "sentence-transformers==3.0.1",
    "yt-dlp==2026.06.09",
    "gdown==5.2.0",
    "opencv-python==4.10.0.84",
    "qdrant-client==1.10.1",
    "streamlit==1.37.0",
    "google-generativeai==0.7.2",
    "Pillow==10.4.0",
        "requests==2.32.3",
    "pydub==0.25.1",
        "python-dotenv>=1.2.2",
        "cohere>=7.0.5",
        "numpy==1.24.3",
]

authors = [
    { name = "Video Insight Developers" }
]
license = { file = "LICENSE" }
keywords = ["video", "transcription", "embeddings", "qdrant", "opencv", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://example.com/"
Repository = "https://github.com/your-org/depi-gp"


[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modules*"]
