[project]
name = "depi-gp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "yt-dlp>=2024.1.1",
    "gdown>=4.7.1",
    "opencv-python>=4.8.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.4.2",
]
